--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Warranty Checklist System </title>
   <style>
-
+	  
 /* Header styling */
 header {
   background: #1f2937;
@@ -235,6 +235,150 @@ header {
   </div>
 
   <!-- Frymaster -->
+  <div class="brand" data-brand="Frymaster">
+    <h2>FRYMASTER</h2>
+    <div class="parts">
+      <div class="part" data-part="Transformer">
+        <img src="transformer.png" text="transformer" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Transformer</h3>
+	<ul class=" bullet-list">
+        <li>Photo of defective part</li>
+        <li>Photo of Serial plate</li>
+        <li>Power supply reading</li>
+        <li>Photo of transformer pins location</li>
+	<li>Photo/Video showing no 24v/12v output</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="Burner">
+        <img src="burner.png" text="burner" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Burner</h3>
+	<ul class=" bullet-list">
+        <li>Photo of defective part</li>
+        <li>Photo of Serial plate</li>
+	<li>WAP Checklist</li>
+        <li>Photo of Gas farm of the store </li>
+        <li>Layout of gas line set-up from the gas farm to the fryers</li>
+	<li>Measure the size of gas pipes and back manifold</li>
+	<li>Incoming Pressure: between 11WC to 13.5WC</li>
+	<li>Outgoing Pressure: between 7.5WC to 7.8WC</li>
+	<li>Microamps reading: between 1.9 to 2.5</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="Controller">
+        <img src="controller.png" text="controller" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Controller</h3>
+	<ul class=" bullet-list">
+        <li>Photo of defective part</li>
+        <li>Photo of Serial plate</li>
+        <li>Power supply reading</li>
+        <li>Photo/Video of the error/issue encounter</li>
+	<li>Swapping of faulty controller to working VAT for confirmation</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="Temperature Probe">
+        <img src="temprobe.png" text="temprobe" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Temperature Probe</h3>
+	<ul class=" bullet-list">
+        <li>Photo of defective part</li>
+        <li>Photo of Serial plate</li>
+        <li>Power supply reading</li>
+        <li>Photo/Video of the hi-limit error</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="Heater Board">
+        <img src="heaterboard.png" text="heaterboard" style="width:200px; height:150px; object-fit:contain;">
+        <h3>I/O Heater Board</h3>
+	<ul class=" bullet-list">
+        <li>Photo of defective part</li>
+        <li>Photo of Serial plate</li>
+        <li>Power supply reading</li>
+	<li>Phot/Video of the error/issue encounter</li>
+        <li>Get output supply of the heating plate</li>
+	<li>Photo if its not on demo mode</li>
+   	</ul>
+	</div>
+
+
+    </div>
+  </div>
+
+	<!-- Carpigiani -->
+  <div class="brand" data-brand="Carpigiani">
+    <h2>CARPIGIANI</h2>
+    <div class="parts">
+      <div class="part" data-part="Transformer">
+        <img src="transformer.png" text="transformer" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Transformer</h3>
+	<ul class=" bullet-list">
+        <li>Photo of defective part</li>
+        <li>Photo of Serial plate</li>
+        <li>Power supply reading</li>
+        <li>Photo of transformer pins location</li>
+	<li>Photo/Video showing no 24v/12v output</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="Burner">
+        <img src="burner.png" text="burner" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Burner</h3>
+	<ul class=" bullet-list">
+        <li>Photo of defective part</li>
+        <li>Photo of Serial plate</li>
+	<li>WAP Checklist</li>
+        <li>Photo of Gas farm of the store </li>
+        <li>Layout of gas line set-up from the gas farm to the fryers</li>
+	<li>Measure the size of gas pipes and back manifold</li>
+	<li>Incoming Pressure: between 11WC to 13.5WC</li>
+	<li>Outgoing Pressure: between 7.5WC to 7.8WC</li>
+	<li>Microamps reading: between 1.9 to 2.5</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="Controller">
+        <img src="controller.png" text="controller" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Controller</h3>
+	<ul class=" bullet-list">
+        <li>Photo of defective part</li>
+        <li>Photo of Serial plate</li>
+        <li>Power supply reading</li>
+        <li>Photo/Video of the error/issue encounter</li>
+	<li>Swapping of faulty controller to working VAT for confirmation</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="Temperature Probe">
+        <img src="temprobe.png" text="temprobe" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Temperature Probe</h3>
+	<ul class=" bullet-list">
+        <li>Photo of defective part</li>
+        <li>Photo of Serial plate</li>
+        <li>Power supply reading</li>
+        <li>Photo/Video of the hi-limit error</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="Heater Board">
+        <img src="heaterboard.png" text="heaterboard" style="width:200px; height:150px; object-fit:contain;">
+        <h3>I/O Heater Board</h3>
+	<ul class=" bullet-list">
+        <li>Photo of defective part</li>
+        <li>Photo of Serial plate</li>
+        <li>Power supply reading</li>
+	<li>Phot/Video of the error/issue encounter</li>
+        <li>Get output supply of the heating plate</li>
+	<li>Photo if its not on demo mode</li>
+   	</ul>
+	</div>
+
+
+    </div>
+  </div>
+
+	<!-- Frymaster -->
   <div class="brand" data-brand="Frymaster">
     <h2>FRYMASTER</h2>
     <div class="parts">
