--- a/index.html
+++ b/index.html
@@ -378,11 +378,11 @@ header {
     </div>
   </div>
 
-	<!-- Frymaster -->
-  <div class="brand" data-brand="Frymaster">
-    <h2>FRYMASTER</h2>
+	<!-- Mastrena -->
+  <div class="brand" data-brand="Mastrena">
+    <h2>MASTRENA</h2>
     <div class="parts">
-      <div class="part" data-part="Transformer">
+      <div class="part" data-part="Sensor">
         <img src="transformer.png" text="transformer" style="width:200px; height:150px; object-fit:contain;">
         <h3>Transformer</h3>
 	<ul class=" bullet-list">
