Refactor service report items in index.html

--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@ header {
       <option value="Manitowoc">MANITOWOC</option>
       <option value="Carpigiani">CARPIGIANI</option>
       <option value="Frymaster">FRYMASTER</option>
-      <option value="Mastrena">MASTRENA</option>
       <option value="Bunn">BUNN-O-MATIC</option>
       <option value="Convotherm">CONVOTHERM</option>
       <option value="Amana">AMANA</option>
@@ -182,8 +181,9 @@ header {
         <img src="compressor.png"text="Compressor"style="width:200px; height:150px; object-fit:contain;">
         <h3>Compressor</h3>
 	<ul class="bullet-list">
+	<li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li><a href="https://docs.google.com/spreadsheets/d/1p76Mdn_OZI25ZCFs7lX0zW--1zjbenZs/edit?usp=sharing&ouid=112898339987182017837&rtpof=true&sd=true" target="_blank">Compressor checklist</a></li>
         <li>Power supply reading</li>
 	<li><a href="https://drive.google.com/file/d/1Ev8pwmJk11etn0hLb3bHz8L5Unq0RxAh/view?usp=sharing" target="_blank">Compressor resistance check (i.e. grounded, open or shorted?)</a></li>
@@ -193,8 +193,9 @@ header {
         <img src="icethicknessprobe.png"text="Ice Thickness Probe"style="width:200px; height:150px; object-fit:contain;">
         <h3>Ice Thickness Probe</h3>
 	<ul class="bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li><a href="https://drive.google.com/file/d/1iA5i7Ad1GKc0W0LZ2TVOFUtsihhOfum6/view?usp=sharing" target="_blank">Scratch test</a></li>
         <li>Power supply reading</li>
 	<li><a href="https://drive.google.com/file/d/19A55ayE_xcsR4wCwTrSLRdXrevgDMUsq/view?usp=sharing" target="_blank">ITP voltage measurement</a></li>
@@ -204,8 +205,9 @@ header {
         <img src="controlboard.png"text="Control board"style="width:200px; height:150px; object-fit:contain;">
         <h3>Control Board</h3>
 	<ul class="bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Photo/Video of the error</li>
         <li>Power supply reading</li>
    	</ul>
@@ -214,8 +216,9 @@ header {
         <img src="hpr.png"text="Harvest Pressure Regulator"style="width:200px; height:150px; object-fit:contain;">
         <h3>Harvest Pressure Regulator</h3>
 	<ul class="bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Photo/Video of low and high side gauge</li>
         <li>Photo/Video of ice build in the evaporator</li>
    	</ul>
@@ -224,8 +227,9 @@ header {
         <img src="wlp.png"text="Water Level Probe"style="width:200px; height:150px; object-fit:contain;">
         <h3>Water Level Probe</h3>
         <ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Photo/Video of WLP display text</li>
         <li>Check continuity of WLP from connector to the three probes</li>
    	</ul>
@@ -233,6 +237,101 @@ header {
 
     </div>
   </div>
+
+<!-- Carpigiani -->
+  <div class="brand" data-brand="Carpigiani">
+    <h2>CARPIGIANI</h2>
+    <div class="parts">
+      <div class="part" data-part="ptcprobe">
+        <img src="ptcprobe.png" text="ptcprobe" style="width:200px; height:150px; object-fit:contain;">
+        <h3>PTC Probe</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Probe resistance</li>
+	<li>Display Error</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="gearbox">
+        <img src="gearbox.png" text="gearbox" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Gearbox</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>AVR/Power supply</li>
+        <li>Pictures of scraper blades status</li>
+	<li>Picture of Beater Motor / Gear Box Plate </li>
+	<li>Video of pump flow</li>
+	<li>Total Cones</li>
+	<li>Event Memory for 2-weeks</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="boards">
+        <img src="boards.png" text="boards" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Electronic Boards</h3>
+	<ul class=" bullet-list">
+	<li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+	</ul>
+	<h4>Main Board</h4>
+	<ul class=" bullet-list">
+        <li>Transformer output (24V & 8.0.8V)</li>
+        <li>AVR/Power Supply</li>
+   	</ul>
+	<h4>Display Board</h4>
+	<ul class=" bullet-list">
+        <li>Proof/Evidence of defect with Disconnected Teorema (Video/Pictures)</li>
+        <li>AVR/Power Supply</li>
+	<li>Transformer output (24V & 8.0.8V)</li>
+	<li>Cable ribbon status</li>
+	</ul>
+	<h4>Display Board</h4>
+	<ul class=" bullet-list">
+       	<li>Transformer output (24V & 8.0.8V)</li>
+        <li>AVR/Power Supply</li>
+	</ul>
+	</div>
+
+	<div class="part" data-part="motor">
+        <img src="motor.png" text="motor" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Motor (Beater/Pump/Agitator)</h3>
+	<ul class=" bullet-list">
+       <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Display Error (if applicable)</li>
+	<li>Capacitor capacitance (if applicable)</li>
+	<li>Thermal overload protector status</li>
+	<li>Motor name plate</li>
+	<li>Total Cones</li>
+	<li>Pictures of scraper blades status</li>
+	<li>Video of pump flow (if defective parts is beater/agitator)</li>
+	<li>Event Memory for 2-weeks</li>
+	<li>AVR / Power Supply </li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="capacitors">
+        <img src="capacitors.png" text="capacitor" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Capacitors</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>AVR / Power Supply</li>
+	<li>Capacitor capacitance</li>
+        </ul>
+	</div>
+
+
+    </div>
+  </div>
+
 
   <!-- Frymaster -->
   <div class="brand" data-brand="Frymaster">
@@ -242,8 +341,9 @@ header {
         <img src="transformer.png" text="transformer" style="width:200px; height:150px; object-fit:contain;">
         <h3>Transformer</h3>
 	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Power supply reading</li>
         <li>Photo of transformer pins location</li>
 	<li>Photo/Video showing no 24v/12v output</li>
@@ -254,8 +354,9 @@ header {
         <img src="burner.png" text="burner" style="width:200px; height:150px; object-fit:contain;">
         <h3>Burner</h3>
 	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
 	<li>WAP Checklist</li>
         <li>Photo of Gas farm of the store </li>
         <li>Layout of gas line set-up from the gas farm to the fryers</li>
@@ -270,8 +371,9 @@ header {
         <img src="controller.png" text="controller" style="width:200px; height:150px; object-fit:contain;">
         <h3>Controller</h3>
 	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Power supply reading</li>
         <li>Photo/Video of the error/issue encounter</li>
 	<li>Swapping of faulty controller to working VAT for confirmation</li>
@@ -282,8 +384,9 @@ header {
         <img src="temprobe.png" text="temprobe" style="width:200px; height:150px; object-fit:contain;">
         <h3>Temperature Probe</h3>
 	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Power supply reading</li>
         <li>Photo/Video of the hi-limit error</li>
    	</ul>
@@ -293,8 +396,9 @@ header {
         <img src="heaterboard.png" text="heaterboard" style="width:200px; height:150px; object-fit:contain;">
         <h3>I/O Heater Board</h3>
 	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Power supply reading</li>
 	<li>Phot/Video of the error/issue encounter</li>
         <li>Get output supply of the heating plate</li>
@@ -306,143 +410,67 @@ header {
     </div>
   </div>
 
-	<!-- Carpigiani -->
-  <div class="brand" data-brand="Carpigiani">
-    <h2>CARPIGIANI</h2>
+<!-- Bunn -->
+  <div class="brand" data-brand="Bunn">
+    <h2>BUNN-O MATIC</h2>
     <div class="parts">
-      <div class="part" data-part="Transformer">
-        <img src="transformer.png" text="transformer" style="width:200px; height:150px; object-fit:contain;">
-        <h3>Transformer</h3>
+      <div class="part" data-part="board">
+        <img src="board.png" text="board" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Control Board</h3>
 	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Power supply reading</li>
-        <li>Photo of transformer pins location</li>
-	<li>Photo/Video showing no 24v/12v output</li>
+        <li>Photo or Video of the issue/error</li>
    	</ul>
 	</div>
 
-	<div class="part" data-part="Burner">
-        <img src="burner.png" text="burner" style="width:200px; height:150px; object-fit:contain;">
-        <h3>Burner</h3>
+	<div class="part" data-part="valveassy">
+        <img src="valveassy.png" text="valveassy" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Valve Assy</h3>
 	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
-	<li>WAP Checklist</li>
-        <li>Photo of Gas farm of the store </li>
-        <li>Layout of gas line set-up from the gas farm to the fryers</li>
-	<li>Measure the size of gas pipes and back manifold</li>
-	<li>Incoming Pressure: between 11WC to 13.5WC</li>
-	<li>Outgoing Pressure: between 7.5WC to 7.8WC</li>
-	<li>Microamps reading: between 1.9 to 2.5</li>
-   	</ul>
-	</div>
-
-	<div class="part" data-part="Controller">
-        <img src="controller.png" text="controller" style="width:200px; height:150px; object-fit:contain;">
-        <h3>Controller</h3>
-	<ul class=" bullet-list">
-        <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Power supply reading</li>
-        <li>Photo/Video of the error/issue encounter</li>
-	<li>Swapping of faulty controller to working VAT for confirmation</li>
+        <li>Photo or Video of the issue/error</li>
    	</ul>
 	</div>
 
-	<div class="part" data-part="Temperature Probe">
-        <img src="temprobe.png" text="temprobe" style="width:200px; height:150px; object-fit:contain;">
-        <h3>Temperature Probe</h3>
+	<div class="part" data-part="solenoidvalve">
+        <img src="csolenoidvalve.png" text="solenoidvalve" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Solenoid Valve</h3>
 	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Power supply reading</li>
-        <li>Photo/Video of the hi-limit error</li>
+        <li>Photo or Video of the issue/error</li>
    	</ul>
 	</div>
 
-	<div class="part" data-part="Heater Board">
-        <img src="heaterboard.png" text="heaterboard" style="width:200px; height:150px; object-fit:contain;">
-        <h3>I/O Heater Board</h3>
+	<div class="part" data-part="sprayhead">
+        <img src="sprayhead.png" text="sprayhead" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Sprayhead Valve</h3>
 	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Power supply reading</li>
-	<li>Phot/Video of the error/issue encounter</li>
-        <li>Get output supply of the heating plate</li>
-	<li>Photo if its not on demo mode</li>
+        <li>Photo or Video of the issue/error</li>
    	</ul>
 	</div>
 
-
-    </div>
-  </div>
-
-	<!-- Mastrena -->
-  <div class="brand" data-brand="Mastrena">
-    <h2>MASTRENA</h2>
-    <div class="parts">
-      <div class="part" data-part="Sensor">
-        <img src="transformer.png" text="transformer" style="width:200px; height:150px; object-fit:contain;">
-        <h3>Transformer</h3>
+	<div class="part" data-part="probekit">
+        <img src="probekit.png" text="probekit" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Probe Replacement Kit</h3>
 	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
         <li>Power supply reading</li>
-        <li>Photo of transformer pins location</li>
-	<li>Photo/Video showing no 24v/12v output</li>
-   	</ul>
-	</div>
-
-	<div class="part" data-part="Burner">
-        <img src="burner.png" text="burner" style="width:200px; height:150px; object-fit:contain;">
-        <h3>Burner</h3>
-	<ul class=" bullet-list">
-        <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
-	<li>WAP Checklist</li>
-        <li>Photo of Gas farm of the store </li>
-        <li>Layout of gas line set-up from the gas farm to the fryers</li>
-	<li>Measure the size of gas pipes and back manifold</li>
-	<li>Incoming Pressure: between 11WC to 13.5WC</li>
-	<li>Outgoing Pressure: between 7.5WC to 7.8WC</li>
-	<li>Microamps reading: between 1.9 to 2.5</li>
-   	</ul>
-	</div>
-
-	<div class="part" data-part="Controller">
-        <img src="controller.png" text="controller" style="width:200px; height:150px; object-fit:contain;">
-        <h3>Controller</h3>
-	<ul class=" bullet-list">
-        <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
-        <li>Power supply reading</li>
-        <li>Photo/Video of the error/issue encounter</li>
-	<li>Swapping of faulty controller to working VAT for confirmation</li>
-   	</ul>
-	</div>
-
-	<div class="part" data-part="Temperature Probe">
-        <img src="temprobe.png" text="temprobe" style="width:200px; height:150px; object-fit:contain;">
-        <h3>Temperature Probe</h3>
-	<ul class=" bullet-list">
-        <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
-        <li>Power supply reading</li>
-        <li>Photo/Video of the hi-limit error</li>
-   	</ul>
-	</div>
-
-	<div class="part" data-part="Heater Board">
-        <img src="heaterboard.png" text="heaterboard" style="width:200px; height:150px; object-fit:contain;">
-        <h3>I/O Heater Board</h3>
-	<ul class=" bullet-list">
-        <li>Photo of defective part</li>
-        <li>Photo of Serial plate</li>
-        <li>Power supply reading</li>
-	<li>Phot/Video of the error/issue encounter</li>
-        <li>Get output supply of the heating plate</li>
-	<li>Photo if its not on demo mode</li>
+        <li>Photo or Video of the issue/error</li>
    	</ul>
 	</div>
 
