--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ header {
 
 	<div class="part" data-part="boards">
         <img src="boards.png" text="boards" style="width:200px; height:150px; object-fit:contain;">
-        <h3>Electronic Boards</h3>
+        <h3>Electronic Boards
 	<ul class=" bullet-list">
 	<li>Photo of Service Report(not exceeds 2-days)</li>
 	<li>Photo of Serial plate</li>
@@ -295,6 +295,7 @@ header {
        	<li>Transformer output (24V & 8.0.8V)</li>
         <li>AVR/Power Supply</li>
 	</ul>
+			</h3>
 	</div>
 
 	<div class="part" data-part="motor">
