--- a/index.html
+++ b/index.html
@@ -153,20 +153,20 @@ header {
   <div class="toolbar">
     <select id="brandFilter" onchange="filterBrand()">
       <option value="all">All Brands</option>
-		<option value="Amana">AMANA</option>
-		<option value="Antunes">ANTUNES</option>
-		<option value="Bunn">BUNN-O-MATIC</option>
-		<option value="Carpigiani">CARPIGIANI</option>
-		<option value="Convotherm">CONVOTHERM</option>
-		<option value="Frymaster">FRYMASTER</option>
-		<option value="Ipso">IPSO</option>
-		<option value="Kolb">KOLB</option>
-      	<option value="Manitowoc">MANITOWOC</option>
-      	<option value="Merrychef">MERRYCHEF</option>
-      	<option value="Schaerer">SCHAERER</option>
-		<option value="Server">SERVER</option>
-      	<option value="Turboair">TURBO AIR</option>
-      	<option value="Vitamix">VITAMIX</option>
+      <option value="Manitowoc">MANITOWOC</option>
+      <option value="Carpigiani">CARPIGIANI</option>
+      <option value="Frymaster">FRYMASTER</option>
+      <option value="Bunn">BUNN-O-MATIC</option>
+      <option value="Convotherm">CONVOTHERM</option>
+      <option value="Amana">AMANA</option>
+      <option value="Antunes">ANTUNES</option>
+      <option value="Vitamix">VITAMIX</option>
+      <option value="Schaerer">SCHAERER</option>
+      <option value="Ipso">IPSO</option>
+      <option value="Merrychef">MERRYCHEF</option>
+      <option value="Server">SERVER</option>
+      <option value="Turboair">TURBO AIR</option>
+      <option value="Kolb">KOLB</option>
     </select>
     <input type="search" id="searchPart" placeholder="Search part name..." onkeyup="searchPart()" />
   </div>
@@ -272,12 +272,11 @@ header {
 
 	<div class="part" data-part="boards">
         <img src="boards.png" text="boards" style="width:200px; height:150px; object-fit:contain;">
-        <h3>Electronic Boards
+        <h3>Electronic Boards</h3>
 	<ul class=" bullet-list">
 	<li>Photo of Service Report(not exceeds 2-days)</li>
 	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
-	</ul>
 	<h4>Main Board</h4>
 	<ul class=" bullet-list">
         <li>Transformer output (24V & 8.0.8V)</li>
@@ -295,7 +294,7 @@ header {
        	<li>Transformer output (24V & 8.0.8V)</li>
         <li>AVR/Power Supply</li>
 	</ul>
-			</h3>
+	</ul>
 	</div>
 
 	<div class="part" data-part="motor">
