--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ function clearSearch() {
 <div class="container">
   <div class="toolbar">
     <select id="brandFilter" onchange="filterBrand()">
-      <option value="all">Top 15 Brands</option>
+      <option value="all">TOP 15 BRANDS</option>
       <option value="Amana">AMANA</option>
       <option value="Antunes">ANTUNES</option>
       <option value="Bunn">BUNN-O-MATIC</option>
@@ -245,6 +245,16 @@ function clearSearch() {
    	</ul>
 	</div>
 
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
 
     </div>
   </div>
@@ -256,19 +266,21 @@ function clearSearch() {
       <div class="part" data-part="gearmotor">
         <img src="gearmotor.png" text="gearmotor" style="width:200px; height:150px; object-fit:contain;">
         <h3>Gear Motor</h3>
+	<ptext><u>Note:</u> Please ensure that 60Hz frequency setting now connected</ptext>
 	<ul class=" bullet-list">
         <li>Photo of Service Report(not exceeds 2-days)</li>
 	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
         <li>Power supply reading</li>
         <li>Photo or Video of the issue/error(i.e. stuck-up, oil-leak, unusual sound)</li>
-	<li><u>Note:</u> Please ensure that 60Hz frequency setting now connected</li>
+	
    	</ul>
 	</div>
 
 	<div class="part" data-part="thermostat">
         <img src="thermostat.png" text="thermostat" style="width:200px; height:150px; object-fit:contain;">
         <h3>Thermostat</h3>
+	<ptext><u>Note:</u> Please try to calibrate first</ptext>
 	<ul class=" bullet-list">
         <li>Photo of Service Report(not exceeds 2-days)</li>
 	<li>Photo of Serial plate</li>
@@ -278,7 +290,6 @@ function clearSearch() {
 	<li>Conduct continuity test</li>
 	<li>Photo of burned buns</li>
    	</ul>
-	<ptext><u>Note:</u> Please try to calibrate first</ptext>
 	</div>
 
 	<div class="part" data-part="cboard">
@@ -308,6 +319,17 @@ function clearSearch() {
 	<div class="part" data-part="relay">
         <img src="relay.png" text="relay" style="width:200px; height:150px; object-fit:contain;">
         <h3>Solid State Relay</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
 	<ul class=" bullet-list">
         <li>Photo of Service Report(not exceeds 2-days)</li>
 	<li>Photo of Serial plate</li>
@@ -376,6 +398,17 @@ function clearSearch() {
 	<div class="part" data-part="heatertank">
         <img src="heatertank.png" text="heatertank" style="width:200px; height:150px; object-fit:contain;">
         <h3>Heater Tank Kit</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
 	<ul class=" bullet-list">
         <li>Photo of Service Report(not exceeds 2-days)</li>
 	<li>Photo of Serial plate</li>
@@ -478,8 +511,19 @@ function clearSearch() {
 	<li>Capacitor capacitance</li>
         </ul>
 	</div>
-
-
+	
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
+	
+	
     </div>
   </div>
 
@@ -509,6 +553,7 @@ function clearSearch() {
         <li>Photo of defective part</li>
         <li>Power supply reading</li>
         <li>Photo or Video of the issue/error</li>
+	<li>Conduct spark test</li>
    	</ul>
 	</div>
 
@@ -533,6 +578,8 @@ function clearSearch() {
         <li>Photo of defective part</li>
         <li>Power supply reading</li>
         <li>Photo or Video of the issue/error</li>
+	<li>Did you check if there is loose connections?</li>
+	<li>Did you tried to install UI in other unit to confirm?</li>
    	</ul>
 	</div>
 
@@ -547,6 +594,18 @@ function clearSearch() {
         <li>Photo or Video of the issue/error</li>
    	</ul>
 	</div>
+
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
+
 
     </div>
   </div>
@@ -563,7 +622,7 @@ function clearSearch() {
 	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
         <li>Power supply reading</li>
-        <li>Photo of transformer pins location</li>
+        <li>Photo of transformer pins location(should pin1 and 6)</li>
 	<li>Photo/Video showing no 24v/12v output</li>
    	</ul>
 	</div>
@@ -622,6 +681,17 @@ function clearSearch() {
 	<li>Phot/Video of the error/issue encounter</li>
         <li>Get output supply of the heating plate</li>
 	<li>Photo shown unit not on demo mode</li>
+   	</ul>
+	</div>
+
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
    	</ul>
 	</div>
 
@@ -684,6 +754,17 @@ function clearSearch() {
 	<div class="part" data-part="keypad">
         <img src="keypad.png" text="keypad" style="width:200px; height:150px; object-fit:contain;">
         <h3>Keypad</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
+	
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
 	<ul class=" bullet-list">
         <li>Photo of Service Report(not exceeds 2-days)</li>
 	<li>Photo of Serial plate</li>
@@ -761,6 +842,16 @@ function clearSearch() {
    	</ul>
 	</div>
 
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
 
     </div>
   </div>
@@ -776,6 +867,7 @@ function clearSearch() {
 	<li>Photo of Service Report(not exceeds 2-days)</li>
 	<li>Photo of Serial plate</li>
         <li>Photo of defective part</li>
+	<li>Photo of compressor sticker plate</li>
         <li><a href="https://docs.google.com/spreadsheets/d/1p76Mdn_OZI25ZCFs7lX0zW--1zjbenZs/edit?usp=sharing&ouid=112898339987182017837&rtpof=true&sd=true" target="_blank">Compressor checklist</a></li>
         <li>Power supply reading</li>
 	<li><a href="https://drive.google.com/file/d/1Ev8pwmJk11etn0hLb3bHz8L5Unq0RxAh/view?usp=sharing" target="_blank">Compressor resistance check (i.e. grounded, open or shorted?)</a></li>
@@ -827,6 +919,17 @@ function clearSearch() {
 	<li><a href="https://drive.google.com/file/d/1wB-VFtK4lktb2GmGzAFK4BtCLkmdEp8K/view?usp=sharing" target="_blank">Jumper WLP connection #2 and #3 at the control board and take a photo on the display</a></li>
    	</ul>
       </div>
+
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
 
     </div>
   </div>
@@ -894,6 +997,18 @@ function clearSearch() {
         <li>Photo or Video of the issue/error</li>
    	</ul>
 	</div>
+	
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
+
 
     </div>
   </div>
@@ -911,6 +1026,7 @@ function clearSearch() {
         <li>Photo of defective part</li>
         <li>Power supply reading</li>
         <li>Photo or Video of the issue/error</li>
+	<li><a href="https://drive.google.com/file/d/1CYTuhboi2tmP5HdwSH1FiTi2JbgGJJBK/view?usp=sharing" target="_blank">Conduct continuity test</a></li>
    	</ul>
 	</div>
 
@@ -961,6 +1077,32 @@ function clearSearch() {
         <li>Photo or Video of the issue/error</li>
    	</ul>
 	</div>
+
+	<div class="part" data-part="transformer2">
+        <img src="transformer2.png" text="transformer2" style="width:200px; height:150px; object-fit:contain;">
+        <h3>Transformer</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+	<li><a href="https://drive.google.com/file/d/19f5jtE0Uh0dgZwK9JwUTPfpbXp3F2GEF/view?usp=sharing" target="_blank">Conduct continuity test</a></li>
+   	</ul>
+	</div>
+
+	
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
+
 
     </div>
   </div>
@@ -1030,6 +1172,18 @@ function clearSearch() {
         <li>Photo or Video of the issue/error</li>
    	</ul>
 	</div>
+	
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
+
 
     </div>
   </div>
@@ -1098,6 +1252,18 @@ function clearSearch() {
    	</ul>
 	</div>
 
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
+
+
     </div>
   </div>
 
@@ -1114,8 +1280,21 @@ function clearSearch() {
         <li>Photo of defective part</li>
         <li>Power supply reading</li>
         <li>Photo or Video of the issue/error</li>
+	<li>Photo of compressor sticker plate</li>
    	</ul>
 	</div>
+
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
+
 
     </div>
   </div>
@@ -1152,6 +1331,18 @@ function clearSearch() {
         <li>Photo or Video of the issue/error</li>
 	</ul>
 	</div>
+
+	<div class="part" data-part="defpart">
+        <h3>Other Parts</h3>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+	<li>Photo of Serial plate</li>
+        <li>Photo of defective part</li>
+        <li>Power supply reading</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
+
 
     </div>
   </div>
