--- a/index.html
+++ b/index.html
@@ -859,6 +859,7 @@ function clearSearch() {
  <!-- Manitowoc -->
   <div class="brand" data-brand="Manitowoc">
     <h2>MANITOWOC</h2>
+	  <ptext><u>Note:</u> You may claim the Freon and Reprocessing Kit only if the unit is less than one (1) year old.</ptext>
     <div class="parts">
       <div class="part" data-part="Compressor">
         <img src="compressor.png"text="Compressor"style="width:200px; height:150px; object-fit:contain;">
