--- a/index.html
+++ b/index.html
@@ -859,7 +859,6 @@ function clearSearch() {
  <!-- Manitowoc -->
   <div class="brand" data-brand="Manitowoc">
     <h2>MANITOWOC</h2>
-	  <ptext><u>Note:</u> You may claim the Freon and Reprocessing Kit only if the unit is less than one (1) year old.</ptext>
     <div class="parts">
       <div class="part" data-part="Compressor">
         <img src="compressor.png"text="Compressor"style="width:200px; height:150px; object-fit:contain;">
@@ -920,6 +919,16 @@ function clearSearch() {
 	<li><a href="https://drive.google.com/file/d/1wB-VFtK4lktb2GmGzAFK4BtCLkmdEp8K/view?usp=sharing" target="_blank">Jumper WLP connection #2 and #3 at the control board and take a photo on the display</a></li>
    	</ul>
       </div>
+
+	<div class="part" data-part="freon">
+		<h3>Freon and Reprocessing Kit</h3>
+		<ptext><u>Note:</u> You can only claim if unit is less than one(1)-year</ptext>
+	<ul class=" bullet-list">
+        <li>Photo of Service Report(not exceeds 2-days)</li>
+		<li>Photo of Serial plate</li>
+        <li>Photo or Video of the issue/error</li>
+   	</ul>
+	</div>
 
 	<div class="part" data-part="defpart">
         <h3>Other Parts</h3>
